[gd_scene load_steps=31 format=2]

[ext_resource path="res://content/gadgets/shield/batterie-Sheet.png" type="Texture" id=1]
[ext_resource path="res://content/gadgets/shield/ShieldBattery.gd" type="Script" id=2]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=3]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/sounds/OverCharge.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/UI/Error.wav" type="AudioStream" id=6]
[ext_resource path="res://content/gadgets/shield/batterie_overload_sheet+gif.png" type="Texture" id=7]
[ext_resource path="res://content/sounds/Locations/Repellent/smallboatEnginebetter3.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 35, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 35, 64, 35, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 70, 64, 35, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 105, 64, 35, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 140, 64, 35, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 175, 64, 35, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 210, 64, 35, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 35, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 70, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 105, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 140, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 175, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 210, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 35, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 35, 32, 35, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 70, 32, 35, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 105, 32, 35, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 140, 32, 35, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 175, 32, 35, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 210, 32, 35, 32 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "3",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "1",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "2",
"speed": 10.0
} ]

[node name="ShieldBattery" type="Node2D" groups=["overchargable", "saveable"]]
position = Vector2( 3, -1 )
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -4, -12 )
texture = ExtResource( 1 )
hframes = 3
vframes = 2
frame = 2

[node name="Clipper" type="Control" parent="."]
margin_left = -13.0
margin_top = -7.0
margin_right = 5.0
margin_bottom = 1.0
rect_clip_content = true

[node name="Filling" type="Sprite" parent="Clipper" groups=["noflip"]]
position = Vector2( 9, -3 )
texture = ExtResource( 1 )
hframes = 3
vframes = 2
frame = 3

[node name="Overcharge" type="AnimatedSprite" parent="."]
position = Vector2( -3, -13 )
frames = SubResource( 22 )
animation = "3"
frame = 5
playing = true

[node name="Usable" parent="." instance=ExtResource( 3 )]

[node name="OverchargeSound" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 5 )
volume_db = -7.429
pitch_scale = 1.18
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 160.0
minAudibleDistance = 20.0

[node name="OverchargeAmbienceSound" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 8 )
volume_db = -8.303
pitch_scale = 1.13
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 70.0
minAudibleDistance = 20.0
loop = true

[node name="NoOverchargeSound" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 6 )
pitch_scale = 2.0
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
